http/https and whitespace cleanup

--- a/docs/QTRSensors.dox
+++ b/docs/QTRSensors.dox
@@ -1,13 +1,13 @@
 /*! \file QTRSensors.h
- * 
+ *
  * This library is included in the Zumo Shield libraries as a dependency for the
  * ZumoReflectanceSensorArray library. If you are programming an Arduino on a
  * Zumo, you should generally use the ZumoReflectanceSensorArray library instead
  * of using the %QTRSensors library directly.
  *
  * For documentation specific to the %QTRSensors library, please see the [user's
- * guide](http://www.pololu.com/docs/0J19) on Pololu's website.
- * 
+ * guide](https://www.pololu.com/docs/0J19) on Pololu's website.
+ *
  *
  * \class QTRSensors QTRSensors.h
  * \brief <em>(%ZumoReflectanceSensorArray dependency)</em>
@@ -19,12 +19,12 @@
  * of using the %QTRSensors library directly.
  *
  * For documentation specific to the %QTRSensors library, please see the [user's
- * guide](http://www.pololu.com/docs/0J19) on Pololu's website.
+ * guide](https://www.pololu.com/docs/0J19) on Pololu's website.
  *
  *
  * \class QTRSensorsRC QTRSensors.h
  * \copydoc QTRSensors
- * 
+ *
  *
  * \class QTRSensorsAnalog QTRSensors.h
  * \copydoc QTRSensors
