--- a/src/QTRSensors.dox
+++ b/src/QTRSensors.dox
@@ -1,24 +1,23 @@
 /*! \file QTRSensors.h
  *
- * This library is included in the Zumo Shield libraries as a dependency for the
- * ZumoReflectanceSensorArray library. If you are programming an Arduino on a
- * Zumo, you should generally use the ZumoReflectanceSensorArray library instead
+ * This is included in the Zumo Shield Arduino Library as a dependency for
+ * ZumoReflectanceSensorArray. If you are programming an Arduino on a
+ * Zumo, you should generally use the ZumoReflectanceSensorArray instead
  * of using the %QTRSensors library directly.
  *
- * For documentation specific to the %QTRSensors library, please see the [user's
+ * For documentation specific to %QTRSensors, please see the [user's
  * guide](https://www.pololu.com/docs/0J19) on Pololu's website.
  *
  *
  * \class QTRSensors QTRSensors.h
  * \brief <em>(%ZumoReflectanceSensorArray dependency)</em>
  *
- * This class is part of the \ref QTRSensors.h "QTRSensors" library, which is
- * included in the Zumo Shield libraries as a dependency for the
- * ZumoReflectanceSensorArray library. If you are programming an Arduino on a
- * Zumo, you should generally use the ZumoReflectanceSensorArray library instead
+ * This is included in the Zumo Shield Arduino Library as a dependency for
+ * ZumoReflectanceSensorArray. If you are programming an Arduino on a
+ * Zumo, you should generally use the ZumoReflectanceSensorArray instead
  * of using the %QTRSensors library directly.
  *
- * For documentation specific to the %QTRSensors library, please see the [user's
+ * For documentation specific to %QTRSensors, please see the [user's
  * guide](https://www.pololu.com/docs/0J19) on Pololu's website.
  *
  *
